--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+rdma-core (15.1-1) unstable; urgency=low
+
+  * New upstream stable release.
+
+ -- Nicolas Morey-Chaisemartion <nmoreychaisemartin@suse.com>  Mon, 27 Nov 2017 10:37:05 +0100
+
 rdma-core (15-1) unstable; urgency=low
 
   * New version.
