rdma-core: Autospec creation for update from version 16.1 to version 16.2
Bharat Potnuri (1):
      iwpmd: fix double mutex unlock

Devesh Sharma (2):
      libbnxt_re: Fix lat test failure in event mode
      libbnxt_re: Update and sort device pci-id table

Jason Gunthorpe (1):
      cbuild: Support distros that only ship python3

Nicolas Morey-Chaisemartin (1):
      Bump to version 16.2

Selvin Xavier (1):
      libbnxt_re: Display FW version using ibv_devinfo

rdma-core (16.2-1) unstable; urgency=low

  * New upstream release.

 -- Nicolas Morey-Chaisemartin <NMoreyChaisemartin@suse.com>  Thu, 01 Feb 2018 09:38:44 +0100

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+rdma-core (16.2-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey-Chaisemartin <NMoreyChaisemartin@suse.com>  Thu, 01 Feb 2018 09:38:44 +0100
+
 rdma-core (16.1-1) unstable; urgency=low
 
   * New upstream release.
