rdma-core: Autospec creation for update from version 16.2 to version 17
Adit Ranadive (1):
      vmw_pvrdma: Drop the extraneous align_next_power2 for sges

Aditya Sarwade (1):
      vmw_pvrdma: Fix SRQN returned to library

Alaa Hleihel (1):
      build: Pass extra cmake flags

Bart Van Assche (1):
      register_to_trap(): Specify number of iterations once

Benjamin Drung (9):
      udev.md: Fix typo 'le.g.acy' -> 'legacy'
      Fix typos 'pontentially' and 'bandwith'
      debian: Add udev dependency to rdma-core and srptools
      debian: Bump Standards-Version to 4.1.3
      debian: Update changelog to include Debian uploads 16.x
      debian: Do not require valgrind on ia64
      debian: Guard udevadm call again
      debian: Override intentional WantedBy lintian warning
      debian: Add Debian uploads up to version 16.2-1

Bharat Potnuri (1):
      iwpmd: fix double mutex unlock

Bryan Tan (1):
      vmw_pvrdma: Remove usage of BIT() from vmw_pvrdma

Devesh Sharma (2):
      libbnxt_re: Fix lat test failure in event mode
      libbnxt_re: Update and sort device pci-id table

Doug Ledford (4):
      Merge pull request #283 from jgunthorpe/fixes
      Merge pull request #288 from dsharma283/master
      redhat/spec: Don't include ifup/ifdown-ib
      redhat: remove files that we no longer use

Feras Daoud (5):
      mlx5: Support for user space clock info
      mlx5: Add direct verbs support for query clock info
      mlx5: Add direct verb to translate device timestamp to nanoseconds
      verbs: Add support to read completion's timestamp in wall clock nanoseconds
      mlx5: Implement read_completion_wallclock_ns

Hal Rosenstock (1):
      srp_daemon.c: Cosmetic change to some error messages

Honggang Li (1):
      srp_daemon: Don't create async_ev_thread if only run once

Jason Gunthorpe (66):
      verbs: Fix typo in copying IBV_FLOW_SPEC_UDP/TCP 'val'
      verbs: Remove duplicate NULL test from flow ops
      verbs: Get rid of verbs_context->has_comp_mask

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,20 +1,38 @@
-rdma-core (16.2-1) unstable; urgency=low
+rdma-core (17.0-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Nicolas Morey-Chaisemartin <NMoreyChaisemartin@suse.com>  Thu, 01 Feb 2018 09:38:44 +0100
+ -- Jason Gunthorpe <jgg@obsidianresearch.com>  Thu, 15 Feb 2018 12:06:48 +0100
 
-rdma-core (16.1-1) unstable; urgency=low
+rdma-core (16.2-1) unstable; urgency=medium
+
+  * New upstream bugfix release
+  * Guard udevadm call again
+  * Override intentional systemd WantedBy= relationship lintian warning
+
+ -- Benjamin Drung <benjamin.drung@profitbricks.com>  Thu, 15 Feb 2018 11:41:14 +0100
+
+rdma-core (16.1-2) unstable; urgency=medium
+
+  * Do not require valgrind on ia64 (Closes: #887511)
+
+ -- Benjamin Drung <benjamin.drung@profitbricks.com>  Fri, 19 Jan 2018 12:37:05 +0100
+
+rdma-core (16.1-1) unstable; urgency=medium
+
+  * New upstream bugfix release.
+  * Bump Standards-Version to 4.1.3 (no changes needed)
+  * Add udev dependency to rdma-core and srptools
+
+ -- Benjamin Drung <benjamin.drung@profitbricks.com>  Thu, 04 Jan 2018 14:42:26 +0100
+
+rdma-core (16.0-1) unstable; urgency=medium
 
   * New upstream release.
+  * Update private libibverbs symbols
+  * Bump Standards-Version to 4.1.2 (no changes needed)
 
- -- Nicolas Morey-Chaisemartin <NMoreyChaisemartin@suse.com>  Thu, 04 Jan 2018 09:33:06 +0100
-
-rdma-core (16.0-1) unstable; urgency=low
-
-  * New upstream release.
-
- -- Jason Gunthorpe <jgg@obsidianresearch.com>  Tue, 14 Nov 2017 12:24:09 +0100
+ -- Benjamin Drung <benjamin.drung@profitbricks.com>  Tue, 12 Dec 2017 11:01:38 +0100
 
 rdma-core (15.1-1) unstable; urgency=medium
 
