--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+rdma-core (17.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey-Chaisemartin <NMoreyChaisemartin@suse.com>  Tue, 13 Mar 2018 15:28:24 +0100
+
 rdma-core (17.0-1) unstable; urgency=medium
 
   * New upstream release.
