[update to 20.1] pkg-config: Move Libs.private to after Libs
Daria Velikovsky (1):
      mlx5: Fix flow tag mask

Jason Gunthorpe (3):
      verbs: If the uverbs module is not loaded allow get_devices to retry init
      pkg-config: Move Libs.private to after Libs
      travis: Fix travis failures

Nicolas Morey-Chaisemartin (2):
      ABI Files
      Bump to version 20.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+rdma-core (20.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>  Mon, 15 Oct 2018 11:01:57 +0200
+
 rdma-core (20.0-1) unstable; urgency=medium
 
   * New upstream release.
