[update to 22.1] libhns: Bugfix for allocating and freeing sq db buffer
Gal Pressman (1):
      verbs: Fix pingpong buffer validation

Håkon Bugge (1):
      ibacm: Print correct pkey

Lijun Ou (1):
      libhns: Bugfix for allocating and freeing sq db buffer

Nicolas Morey-Chaisemartin (2):
      ABI Files
      Bump to version 22.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+rdma-core (22.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>  Wed, 06 Feb 2019 08:18:02 +0100
+
 rdma-core (22.0-1) unstable; urgency=medium
 
   * New upstream release.
